=================================
Changes for Crate Admin Interface
=================================

Unreleased
==========

2014/11/17 0.10.2
=================

 - fixed issue that caused clunky scrolling with trackpad
   in Safari that mainly occured when having a narrow browser width

2014/11/14 0.10.1
=================

 - made console placeholder text darker so you can distinguish better
   between placeholder text and actually written statement

 - fixed 'Execute Query' button in console view

2014/11/06 0.10.0
=================

 - added hint to console: press shift+enter to submit query

 - fix: UI showed partitions from wrong table after switching between tables
   this could also lead to 'red' partitions if the newly selected table also had partitions

 - added syntax highlighting to sql console

2014/08/19 0.9.3
================

 - send cookies with cross-origin requests

2014/08/14 0.9.2
================

 - fix: display number of records and started shards correctly
   if table and blob table have the same name

2014/07/22 0.9.1
================

 - fix: do not append limit to insert by query statement

2014/07/05 0.9.0
================

 - use new sys.nodes.fs expression in order to
   calculate disk utilization of data disks correctly

2014/06/24 0.8.4
================

 - changed font in console for better readability

 - fixed ui glitch that caused right column content to be cut off

 - fix: include initializing shards in calculation for underreplicated shards

2014/06/24 0.8.3
================

 - fix: ui showed partitions from previously selected table

2014/06/06 0.8.2
================

 - fix: make table list and node list available in mobile view

2014/06/04 0.8.1
================

 - fix: round percentage of available and underreplicated data correctly

2014/06/04 0.8.0
================

 - make table that displays table partitions horizontally scrollable

 - display developer news notifications

2014/05/19 0.7.3
================
