@@ -18,7 +18,7 @@
 // Brand colors
 // -------------------------
 
-//@brand-primary:         #428bca;
+@brand-primary:           #428bca;
 @brand-success:           #00c561;
 @brand-warning:           #ffc600;
 @brand-danger:            #ff5151;
