@@ -1,4 +1,4 @@
-<div>
+<div ng-controller="StatusBarController">
 
   <ul class="nav navbar-nav navbar-right navbar-notification" ng-controller="NotificationsController">
     <li class="dropdown">
@@ -25,18 +25,31 @@
     </li>
   </ul>
 
-  <ul class="nav navbar-nav navbar-right navbar-user" ng-controller="StatusBarController">
+  <ul class="nav navbar-nav navbar-right navbar-notification" ng-controller="HelpMenuController">
+    <li class="dropdown">
+      <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-question-circle"></i></a>
+      <ul class="dropdown-menu notifications">
+        <li class="notification-header"><h3>Help</h3><hr /></li>
+        <li class="news-item clearfix">
+          <a href="{{ docs_url }}" target="_docs">
+            <div class="icon" style="padding-top:7px;"><i class="fa fa-book"></i></div>
+            <h3>Crate Manual <span ng-show="version">({{ version.number }})</span> &raquo;</h3>
+            <div>Read the online documentation</div>
+          </a>
+        </li>
+        <li class="news-item clearfix" ng-show="user.uid">
+          <div ng-include="'views/emailform.html'" style="padding:3px 20px;"></div>
+        </li>
+      </ul>
+    </li>
+  </ul>
+
+  <ul class="nav navbar-nav navbar-right navbar-user">
     <li>Cluster: <span class="label label-cluster">{{cluster_name}}</span></li>
     <li>Version: <span ng-class="{'label-danger':version_warning}" ng-show="version" data-original-title="{{ versions.join('\n') }}" rel="tooltip">{{ version.number }}<span ng-show="version.snapshot">-SNAPSHOT-{{ version.hash.substr(0,7) }}</span></span></li>
     <li>Nodes: <span class="label">{{ num_nodes }}</span></li>
     <li>Health: <span class="label {{cluster_color_label}}">{{cluster_state}}</span></li>
-    <li>
-      Load:
-      <span class="label label-load1">{{load1}}</span>/
-      <span class="label label-load5">{{load5}}</span>/
-      <span class="label label-load15">{{load15}}</span>
-    </li>
-    <li><a ng-href="{{ docs_url }}" href="" target="_docs"><i class="fa fa-question-circle"></i></a></li>
+    <li>Load: <span class="label label-load1">{{ load1 }}</span>/<span class="label label-load5">{{ load5 }}</span>/<span class="label label-load15">{{ load15 }}</span></li>
   </ul>
 
 </div>
